--- a/CookHelper/ProductsPage.xaml
+++ b/CookHelper/ProductsPage.xaml
@@ -2,9 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:local="clr-namespace:CookHelper" 
-             x:Class="CookHelper.ProductsPage">
+             x:Class="CookHelper.ProductsPage"
+             xmlns:controls="clr-namespace:CookHelper.Controls;assembly=CookHelper">
+
     <StackLayout>
-        <Label Text="Welcome to Xamarin.Forms!" 
+        <Label Text="This is ProductsPage : NavigationPage" 
                HorizontalOptions="Center" 
                VerticalOptions="CenterAndExpand" />
     </StackLayout>
