Refactor plain structure to MVVM

--- a/CookHelper/Views/ProductsPage.xaml
+++ b/CookHelper/Views/ProductsPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:local="clr-namespace:CookHelper" 
-             x:Class="CookHelper.ProductsPage"
+             xmlns:views="clr-namespace:CookHelper.Views" 
+             x:Class="CookHelper.Views.ProductsPage"
              xmlns:controls="clr-namespace:CookHelper.Controls;assembly=CookHelper">
     
     <NavigationPage.TitleView> 
