--- a/CookHelper/Views/ProductsPage.xaml
+++ b/CookHelper/Views/ProductsPage.xaml
@@ -47,7 +47,34 @@
                HorizontalOptions="Center" 
                VerticalOptions="CenterAndExpand" />
         
-        <views:CustomTabBar />
+        <Grid BackgroundColor="#985321" 
+              VerticalOptions="End"
+              HeightRequest="50" 
+              HorizontalOptions="Fill" 
+              ColumnSpacing="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0" Padding="3">
+                <Image HeightRequest="32" WidthRequest="32" Source="tab_products.png" HorizontalOptions="Center" VerticalOptions="Start"/>
+                <Label Text="Produkty" HorizontalOptions="Center" VerticalOptions="End" FontSize="10" TextColor="White"/>
+                <Grid.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="Click" NumberOfTapsRequired="1"></TapGestureRecognizer>
+                </Grid.GestureRecognizers>
+            </Grid>
+            <Grid Grid.Column="1" Padding="3">
+                <Image HeightRequest="32" WidthRequest="32" Source="tab_recipes.png" HorizontalOptions="Center" VerticalOptions="Start"/>
+                <Label Text="Przepisy" HorizontalOptions="Center" VerticalOptions="End" FontSize="10" TextColor="White"/>
+            </Grid>
+            <Grid Grid.Column="2" Padding="3">
+                <Image HeightRequest="32" WidthRequest="32" Source="tab_settings.png" HorizontalOptions="Center" VerticalOptions="Start"/>
+                <Label Text="Ustawienia" HorizontalOptions="Center" VerticalOptions="End" FontSize="10" TextColor="White"/>
+            </Grid>
+        </Grid>
+        
+        
     </StackLayout>
     
 
