--- a/CookHelper/Views/RecipesPage.xaml
+++ b/CookHelper/Views/RecipesPage.xaml
@@ -61,10 +61,10 @@
             HeightRequest="50" 
             ColumnSpacing="0"
             >
-            <Grid Grid.Column="0" Padding="3">
+            <Grid Grid.Column="0" Padding="4">
                 <Image 
-                    HeightRequest="32" 
-                    WidthRequest="32" 
+                    HeightRequest="28" 
+                    WidthRequest="28" 
                     Source="tab_products.png" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
@@ -80,11 +80,11 @@
                     <TapGestureRecognizer Tapped="TabBar_ProductsPage" />
                 </Grid.GestureRecognizers>
             </Grid>
-            <Grid Grid.Column="1" Padding="3">
+            <Grid Grid.Column="1" Padding="4">
                 <Image 
-                    HeightRequest="32" 
-                    WidthRequest="32" 
-                    Source="tab_recipes.png" 
+                    HeightRequest="28" 
+                    WidthRequest="28" 
+                    Source="tab_recipes_active.png" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                 />
@@ -99,10 +99,10 @@
                     <TapGestureRecognizer Tapped="TabBar_RecipesPage" />
                 </Grid.GestureRecognizers>
             </Grid>
-            <Grid Grid.Column="2" Padding="3">
+            <Grid Grid.Column="2" Padding="4">
                 <Image 
-                    HeightRequest="32"
-                    WidthRequest="32" 
+                    HeightRequest="28"
+                    WidthRequest="28" 
                     Source="tab_settings.png" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
