--- a/CookHelper/Views/ProductsPage.xaml
+++ b/CookHelper/Views/ProductsPage.xaml
@@ -48,7 +48,7 @@
             </Grid>
         </Grid>
     </NavigationPage.TitleView> 
-    <StackLayout BackgroundColor="White">
+    <StackLayout BackgroundColor="#e5d3b3">
         <Label 
             Text="This is ProductsPage : NavigationPage" 
             HorizontalOptions="Center" 
