--- a/CookHelper/Views/SettingsPage.xaml
+++ b/CookHelper/Views/SettingsPage.xaml
@@ -19,7 +19,7 @@
             />
         </Grid>
     </NavigationPage.TitleView> 
-    <StackLayout BackgroundColor="White">
+    <StackLayout BackgroundColor="#e5d3b3">
         <Label 
             Text="This is SettingsPage : NavigationPage" 
             HorizontalOptions="Center" 
