--- a/CookHelper/Views/SettingsPage.xaml
+++ b/CookHelper/Views/SettingsPage.xaml
@@ -22,7 +22,7 @@
     <StackLayout BackgroundColor="#e5d3b3" Spacing="0">
 
         <Grid BackgroundColor="#D18E69" Margin="0,36,0,0">
-            <Grid BackgroundColor="#eae5dc" HeightRequest="68" Margin="0,0.5,0,0.5">
+            <Grid BackgroundColor="White" HeightRequest="68" Margin="0,0.5,0,0.5">
                 <Label
                     Text="Zaloguj się do swojego konta"
                     FontSize="17" 
@@ -30,15 +30,22 @@
                     Margin="60,0,0,0"
                     VerticalOptions="Center"
                 />
+                <Grid.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="Setting_Tap" />
+                </Grid.GestureRecognizers>
             </Grid>
+            
         </Grid>
         
         <Grid BackgroundColor="#D18E69" Margin="0,36,0,0">
-            <Grid BackgroundColor="#eae5dc" HeightRequest="127" Margin="0,0.5,0,0.5"> 
+            <Grid BackgroundColor="White" HeightRequest="127" Margin="0,0.5,0,0.5"> 
                 <Grid HeightRequest="42" VerticalOptions="Start">
                     <Image Source="set_weight.png" Margin="16,8" HorizontalOptions="Start"/>
                     <Label Text="Jednostki wagi" FontSize="16" Margin="60,0,0,0" VerticalOptions="Center" />
                     <Image Source="set_next.png" HorizontalOptions="End"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="Setting_Tap" />
+                    </Grid.GestureRecognizers>
                 </Grid>
              
                 <Grid BackgroundColor="#D18E69" Margin="58,42,0,0" HeightRequest="0.5" VerticalOptions="Start"/>
@@ -47,6 +54,9 @@
                     <Image Source="set_volume.png" Margin="16,8" HorizontalOptions="Start"/>
                     <Label Text="Jednostki objętości" FontSize="16" Margin="60,0,0,0" VerticalOptions="Center" />
                     <Image Source="set_next.png" HorizontalOptions="End"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="Setting_Tap" />
+                    </Grid.GestureRecognizers>
                 </Grid>
                 
                 <Grid BackgroundColor="#D18E69" Margin="58,84.5,0,0" HeightRequest="0.5" VerticalOptions="Start"/>
@@ -55,16 +65,19 @@
                     <Image Source="set_amount.png" Margin="16,8" HorizontalOptions="Start"/>
                     <Label Text="ilości sztuk" FontSize="16" Margin="60,0,0,0" VerticalOptions="Center" />
                     <Image Source="set_next.png" HorizontalOptions="End"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="Setting_Tap" />
+                    </Grid.GestureRecognizers>
                 </Grid>
                 
             </Grid>
         </Grid>
         
         <Grid BackgroundColor="#D18E69" Margin="0,36,0,0">
-            <Grid BackgroundColor="#eae5dc" HeightRequest="42" Margin="0,0.5,0,0.5"> 
-                <Image Source="set_weight.png" Margin="16,8" HorizontalOptions="Start"/>
+            <Grid BackgroundColor="white" HeightRequest="42" Margin="0,0.5,0,0.5"> 
+                <Image Source="set_update.png" Margin="16,8" HorizontalOptions="Start"/>
                 <Label Text="Pobieraj nowe produkty" FontSize="16" Margin="60,0,0,0" VerticalOptions="Center" />
-                <Image Source="set_next.png" HorizontalOptions="End"/>
+                <Switch HorizontalOptions="End" VerticalOptions="Center" Margin="16,0"/>
             </Grid>
         </Grid>
         
