--- a/CookHelper/Views/SettingsPage.xaml
+++ b/CookHelper/Views/SettingsPage.xaml
@@ -19,7 +19,7 @@
             />
         </Grid>
     </NavigationPage.TitleView> 
-    <StackLayout BackgroundColor="#e5d3b3" Spacing="0">
+    <StackLayout BackgroundColor="#FFEFE8" Spacing="0">
 
         <Grid BackgroundColor="#D18E69" Margin="0,36,0,0">
             <Grid BackgroundColor="White" HeightRequest="68" Margin="0,0.5,0,0.5">
