--- a/CookHelper/Views/ProductsPage.xaml
+++ b/CookHelper/Views/ProductsPage.xaml
@@ -48,12 +48,29 @@
             </Grid>
         </Grid>
     </NavigationPage.TitleView> 
-    <StackLayout BackgroundColor="#e5d3b3">
-        <Label 
-            Text="This is ProductsPage : NavigationPage" 
-            HorizontalOptions="Center" 
-            VerticalOptions="CenterAndExpand"
-        />
+    <StackLayout BackgroundColor="#e5d3b3" Spacing="0">
+<ListView x:Name="ItemsList" ItemsSource="{Binding Items}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Label Text="{Binding name}" 
+                                   LineBreakMode="NoWrap" 
+                                   HorizontalOptions="Start"
+                                   VerticalOptions="Center"
+                                   Margin="70,0,0,0"
+                                   Style="{DynamicResource ListItemTextStyle}" 
+                                   FontSize="17" />
+                            <Label Text="{Binding Description}" 
+                                   LineBreakMode="NoWrap" 
+                                   IsVisible="false"
+                                   Style="{DynamicResource ListItemDetailTextStyle}" 
+                                   FontSize="13" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
         <Grid 
             BackgroundColor="#985321" 
             VerticalOptions="End"
