--- a/CookHelper/Views/RecipesPage.xaml
+++ b/CookHelper/Views/RecipesPage.xaml
@@ -33,14 +33,14 @@
                     TextColor="White" 
                 />
                 <Button 
-                    Image="nav_search.png" 
+                    Image="NavigationBar/nav_search.png" 
                     HorizontalOptions="End" 
                     WidthRequest="44" 
                     Margin="0,0,54,0"
                     Clicked="NavBar_SearchBar"
                 />
                 <Button 
-                    Image="nav_add.png" 
+                    Image="NavigationBar/nav_add.png" 
                     HorizontalOptions="End" 
                     WidthRequest="44" 
                     Margin="0,0,4,0"
@@ -65,7 +65,7 @@
                 <Image 
                     HeightRequest="28" 
                     WidthRequest="28" 
-                    Source="tab_products.png" 
+                    Source="TabBar/tab_products.png" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                 />
@@ -84,7 +84,7 @@
                 <Image 
                     HeightRequest="28" 
                     WidthRequest="28" 
-                    Source="tab_recipes_active.png" 
+                    Source="TabBar/tab_recipes_active.png" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                 />
@@ -103,7 +103,7 @@
                 <Image 
                     HeightRequest="28"
                     WidthRequest="28" 
-                    Source="tab_settings.png" 
+                    Source="TabBar/tab_settings.png" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                 />
