--- a/CookHelper/Views/SettingsPage.xaml
+++ b/CookHelper/Views/SettingsPage.xaml
@@ -40,9 +40,9 @@
         <Grid BackgroundColor="#D18E69" Margin="0,36,0,0">
             <Grid BackgroundColor="White" HeightRequest="127" Margin="0,0.5,0,0.5"> 
                 <Grid HeightRequest="42" VerticalOptions="Start">
-                    <Image Source="set_weight.png" Margin="16,8" HorizontalOptions="Start"/>
+                    <Image Source="Settings/set_weight.png" Margin="16,8" HorizontalOptions="Start"/>
                     <Label Text="Jednostki wagi" FontSize="16" Margin="60,0,0,0" VerticalOptions="Center" />
-                    <Image Source="set_next.png" HorizontalOptions="End"/>
+                    <Image Source="Settings/set_next.png" HorizontalOptions="End"/>
                     <Grid.GestureRecognizers>
                         <TapGestureRecognizer Tapped="Setting_Tap" />
                     </Grid.GestureRecognizers>
@@ -51,9 +51,9 @@
                 <Grid BackgroundColor="#D18E69" Margin="58,42,0,0" HeightRequest="0.5" VerticalOptions="Start"/>
                 
                 <Grid HeightRequest="42" VerticalOptions="Start" Margin="0,42.5,0,0">
-                    <Image Source="set_volume.png" Margin="16,8" HorizontalOptions="Start"/>
+                    <Image Source="Settings/set_volume.png" Margin="16,8" HorizontalOptions="Start"/>
                     <Label Text="Jednostki objętości" FontSize="16" Margin="60,0,0,0" VerticalOptions="Center" />
-                    <Image Source="set_next.png" HorizontalOptions="End"/>
+                    <Image Source="Settings/set_next.png" HorizontalOptions="End"/>
                     <Grid.GestureRecognizers>
                         <TapGestureRecognizer Tapped="Setting_Tap" />
                     </Grid.GestureRecognizers>
@@ -62,9 +62,9 @@
                 <Grid BackgroundColor="#D18E69" Margin="58,84.5,0,0" HeightRequest="0.5" VerticalOptions="Start"/>
                 
                 <Grid HeightRequest="42" VerticalOptions="Start" Margin="0,85,0,0">
-                    <Image Source="set_amount.png" Margin="16,8" HorizontalOptions="Start"/>
+                    <Image Source="Settings/set_amount.png" Margin="16,8" HorizontalOptions="Start"/>
                     <Label Text="ilości sztuk" FontSize="16" Margin="60,0,0,0" VerticalOptions="Center" />
-                    <Image Source="set_next.png" HorizontalOptions="End"/>
+                    <Image Source="Settings/set_next.png" HorizontalOptions="End"/>
                     <Grid.GestureRecognizers>
                         <TapGestureRecognizer Tapped="Setting_Tap" />
                     </Grid.GestureRecognizers>
@@ -75,7 +75,7 @@
         
         <Grid BackgroundColor="#D18E69" Margin="0,36,0,0">
             <Grid BackgroundColor="white" HeightRequest="42" Margin="0,0.5,0,0.5"> 
-                <Image Source="set_update.png" Margin="16,8" HorizontalOptions="Start"/>
+                <Image Source="Settings/set_update.png" Margin="16,8" HorizontalOptions="Start"/>
                 <Label Text="Pobieraj nowe produkty" FontSize="16" Margin="60,0,0,0" VerticalOptions="Center" />
                 <Switch HorizontalOptions="End" VerticalOptions="Center" Margin="16,0"/>
             </Grid>
@@ -93,7 +93,7 @@
                 <Image 
                     HeightRequest="28" 
                     WidthRequest="28" 
-                    Source="tab_products.png" 
+                    Source="TabBar/tab_products.png" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                 />
@@ -112,7 +112,7 @@
                 <Image 
                     HeightRequest="28" 
                     WidthRequest="28" 
-                    Source="tab_recipes.png" 
+                    Source="TabBar/tab_recipes.png" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                 />
@@ -131,7 +131,7 @@
                 <Image 
                     HeightRequest="28"
                     WidthRequest="28" 
-                    Source="tab_settings_active.png" 
+                    Source="TabBar/tab_settings_active.png" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                 />
