--- a/CookHelper/Views/ProductsPage.xaml
+++ b/CookHelper/Views/ProductsPage.xaml
@@ -48,30 +48,35 @@
             </Grid>
         </Grid>
     </NavigationPage.TitleView> 
-    <Grid>
-        <StackLayout VerticalOptions="CenterAndExpand">
+    <Grid RowSpacing="0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        
+        <StackLayout Grid.Row="0">
         <ListView 
             ItemsSource="{Binding ProductsCollection}" 
-            BackgroundColor="#FFEFE8" 
-            VerticalOptions="CenterAndExpand" 
+            BackgroundColor="#FFEFE8"
             >
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <Grid>
                             <Grid 
-                                BackgroundColor="Silver" 
                                 HeightRequest="32" 
                                 WidthRequest="32"
                                 VerticalOptions="Center"
                                 HorizontalOptions="Start"
-                                Margin="8,0,0,0"
-                            />   
+                                Margin="16,0,0,0"
+                                >   
+                                <Image Source="{Binding Image}"/>
+                            </Grid>        
                             <Label 
                                 Text="{Binding Name}"
                                 HorizontalOptions="Start"
                                 VerticalOptions="Center"
-                                Margin="52,0,0,0"
+                                Margin="64,0,0,0"
                                 FontSize="17"
                             />
                         </Grid>
@@ -80,9 +85,8 @@
             </ListView.ItemTemplate>
         </ListView>
         </StackLayout>
-        <Grid 
-            BackgroundColor="#985321" 
-            VerticalOptions="End"
+        <Grid Grid.Row="1"
+            BackgroundColor="#985321"
             HeightRequest="50" 
             ColumnSpacing="0"
             >
