--- a/CookHelper/Views/AddProductPage.xaml
+++ b/CookHelper/Views/AddProductPage.xaml
@@ -40,7 +40,10 @@
             <Grid BackgroundColor="White" Margin="0,0.5,0,0.5">
                 <Grid Margin="16,8,0,8" VerticalOptions="Start" 
                       HeightRequest="54" WidthRequest="54" HorizontalOptions="Start">
-                    <Image Source="Settings/set_image.png"/>
+                    <Image x:Name="Pic" Source="Settings/set_image.png"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="Picture_Tap" />
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <Editor Placeholder="Nazwa produktu" Margin="82,0,0,0" MaxLength="25" VerticalOptions="Center"/>
             </Grid>
