--- a/CookHelper/Views/ProductsPage.xaml
+++ b/CookHelper/Views/ProductsPage.xaml
@@ -53,9 +53,8 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        
-        <StackLayout Grid.Row="0">
         <ListView 
+            Grid.Row="0"
             ItemsSource="{Binding ProductsCollection}" 
             BackgroundColor="#FFEFE8"
             >
@@ -84,7 +83,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        </StackLayout>
         <Grid Grid.Row="1"
             BackgroundColor="#985321"
             HeightRequest="50" 
